--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "deploy": "gh-pages -d .output/public"
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
     "@nuxtjs/seo": "^3.3.0",
@@ -21,7 +20,6 @@
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.14.0",
-    "gh-pages": "^6.3.0"
+    "@nuxtjs/tailwindcss": "^6.14.0"
   }
 }
